* new class BarItem (is used in BarSeriesBase to store the data) * refactoring of barseries and category axis (fixed bugs with different barwidth, only some series stacked,...) * new property StackIndex. No several stacks can be made. * new property categoryWidth in categorySeries to decide which space of a category should be used by the bars. * move of render method of columnSeries and BarSeries in BarSeriesBase to avoid duplicate code * added validItems property in barseries. These valid items are calulated in advance avoiding problems in the series methods. (Acess to item by index but some items might be skipped!) Furthermore, by using valid items property at all times one can use the same items and does not need to check them each time. * Changed existing examples to new properties * Added new example to show the new available features.

--- a/Source/Examples/WPF/BarSeriesDemo/MainWindow.xaml
+++ b/Source/Examples/WPF/BarSeriesDemo/MainWindow.xaml
@@ -12,9 +12,9 @@
                     <oxy:LinearAxis MinimumPadding="0" AbsoluteMinimum="0"/>
                 </oxy:Plot.Axes>
                 <oxy:Plot.Series>
-                    <oxy:BarSeries Title="2009" ItemsSource="{Binding Items}" ValueField="Value1"/>
-                    <oxy:BarSeries Title="2010" ItemsSource="{Binding Items}" ValueField="Value2"/>
-                    <oxy:BarSeries Title="2011" ItemsSource="{Binding Items}" ValueField="Value3"/>
+                    <oxy:BarSeries Title="2009" ItemsSource="{Binding Items}" ValueField="Value1" LabelField="Label"/>
+                    <oxy:BarSeries Title="2010" ItemsSource="{Binding Items}" ValueField="Value2" LabelField="Label"/>
+                    <oxy:BarSeries Title="2011" ItemsSource="{Binding Items}" ValueField="Value3" LabelField="Label"/>
                 </oxy:Plot.Series>
             </oxy:Plot>
         </TabItem>
