--- a/Source/Examples/WPF/WpfExamples/Examples/AxesDemo/MainWindow.xaml
+++ b/Source/Examples/WPF/WpfExamples/Examples/AxesDemo/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
         xmlns:oxy="clr-namespace:OxyPlot.Wpf;assembly=OxyPlot.Wpf" 
-        Title="OxyPlot axes demo" Height="480" Width="640">
+        Title="AxesDemo" Height="480" Width="640">
 
     <DockPanel>
         <TabControl Margin="8">
