Minor fixes to use the Metro version, added BasicSample project to test.

--- a/Source/OxyPlot.Metro/Themes/Generic.xaml
+++ b/Source/OxyPlot.Metro/Themes/Generic.xaml
@@ -1,4 +1,7 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:OxyPlot.Metro">
+<ResourceDictionary 
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:OxyPlot.Metro">
 
   <local:ThicknessConverter x:Key="ThicknessConverter" />
 
