Metro project refactoring

--- a/Source/OxyPlot.Metro/Themes/Generic.xaml
+++ b/Source/OxyPlot.Metro/Themes/Generic.xaml
@@ -7,6 +7,7 @@
 
   <Style TargetType="local:TrackerControl">
     <Setter Property="Background" Value="#E0FFFFA0" />
+    <Setter Property="Foreground" Value="Black" />
     <Setter Property="BorderBrush" Value="Black" />
     <Setter Property="BorderThickness" Value="1" />
     <Setter Property="LineStroke" Value="#80000000" />
