--- a/Source/Examples/WPF/WpfExamples/Examples/BarSeriesDemo/MainWindow.xaml
+++ b/Source/Examples/WPF/WpfExamples/Examples/BarSeriesDemo/MainWindow.xaml
@@ -6,15 +6,15 @@
             <oxy:Plot Model="{Binding Model1}"/>
         </TabItem>
         <TabItem Header="Define plot in XAML">
-            <oxy:Plot Title="Bar series" LegendPlacement="Outside" LegendPosition="RightTop" LegendOrientation="Vertical">
+            <oxy:Plot Title="Bar series (XAML)" LegendPlacement="Outside" LegendPosition="RightTop" LegendOrientation="Vertical">
                 <oxy:Plot.Axes>
-                    <oxy:CategoryAxis ItemsSource="{Binding Items}" LabelField="Label"/>
-                    <oxy:LinearAxis MinimumPadding="0" AbsoluteMinimum="0"/>
+                    <oxy:CategoryAxis Position="Left" ItemsSource="{Binding Items}" LabelField="Label"/>
+                    <oxy:LinearAxis Position="Bottom" MinimumPadding="0" AbsoluteMinimum="0"/>
                 </oxy:Plot.Axes>
                 <oxy:Plot.Series>
-                    <!--<oxy:ColumnSeries Title="2009" ItemsSource="{Binding Items}" ValueField="Value1"/>
-                    <oxy:ColumnSeries Title="2010" ItemsSource="{Binding Items}" ValueField="Value2"/>
-                    <oxy:ColumnSeries Title="2011" ItemsSource="{Binding Items}" ValueField="Value3"/>-->
+                    <oxy:BarSeries Title="2009" ItemsSource="{Binding Items}" ValueField="Value1"/>
+                    <oxy:BarSeries Title="2010" ItemsSource="{Binding Items}" ValueField="Value2"/>
+                    <oxy:BarSeries Title="2011" ItemsSource="{Binding Items}" ValueField="Value3"/>
                 </oxy:Plot.Series>
             </oxy:Plot>
         </TabItem>
