--- a/Source/Examples/WPF/SimpleDemo/MainWindow.xaml
+++ b/Source/Examples/WPF/SimpleDemo/MainWindow.xaml
@@ -2,7 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
         xmlns:oxy="clr-namespace:OxyPlot.Wpf;assembly=OxyPlot.Wpf" 
+        xmlns:simpleDemo="clr-namespace:SimpleDemo"
         Title="OxyPlot SimpleDemo" Height="480" Width="640">
+    <Window.DataContext>
+        <simpleDemo:MainViewModel />
+    </Window.DataContext>
     <Grid>
         <!-- The OxyPlot control is binding to a PlotModel in the MainViewModel -->
         <oxy:Plot Model="{Binding Model}"/>
