Breaking change: Changed OxyColor to value type [issue:10037].
Replace OxyColor==null references by OxyColors.Undefined (no color) or
OxyColors.Automatic (OxyPlot will suggest a color).

Added IsUndefined, IsAutomatic and IsVisible methods to OxyColor.

Changed version number to 2013.2

--- a/Source/Examples/Metro/ExampleBrowser/MainPage.xaml
+++ b/Source/Examples/Metro/ExampleBrowser/MainPage.xaml
@@ -35,6 +35,6 @@
             </ListBox.GroupStyle>
         </ListBox>     
                        
-        <oxy:Plot x:Name="Plot1" Grid.Row="1" Grid.Column="1" Model="{Binding SelectedExample.PlotModel}" Background="White"/>        
+        <oxy:Plot x:Name="Plot1" Grid.Row="1" Grid.Column="1" Model="{Binding SelectedExample.PlotModel}" Background="{Binding PlotBackground}"/>        
     </Grid>
 </Page>
