Updated Caliburn.Micro and PropertyTools references

--- a/Source/Examples/WPF/WpfExamples/Examples/LegendsDemo/MainWindow.xaml
+++ b/Source/Examples/WPF/WpfExamples/Examples/LegendsDemo/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:oxy="clr-namespace:OxyPlot.Wpf;assembly=OxyPlot.Wpf" xmlns:pt="clr-namespace:PropertyTools.Wpf;assembly=PropertyTools.Wpf" 
         Title="Legends demo" Height="480" Width="640">
     <DockPanel>
-        <pt:PropertyEditor SelectedObject="{Binding}" DockPanel.Dock="Left" Width="300" LabelWidth="120" ShowTabs="False" Margin="8"/>
+        <pt:PropertyControl SelectedObject="{Binding}" DockPanel.Dock="Left" Width="300" UseTabs="False" Margin="8"/>
         <Grid>
             <oxy:Plot 
             x:Name="plot1" 
