Wpf: added icon to example projects

--- a/Source/Examples/WPF/ExampleBrowser/MainWindow.xaml
+++ b/Source/Examples/WPF/ExampleBrowser/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:oxy="clr-namespace:OxyPlot.Wpf;assembly=OxyPlot.Wpf" 
         Title="OxyPlot.WPF Example Browser"
-        Height="720" Width="1280">
+        Height="720" Width="1280" Icon="OxyPlot_64.png">
     <Window.Resources>
         <SolidColorBrush x:Key="HotItemBackground" Color="#e6f3f7"/>
         <SolidColorBrush x:Key="SelectedItemBorder" Color="#6dbdd1"/>
