--- a/Source/Examples/WPF/WpfExamples/MainWindow.xaml
+++ b/Source/Examples/WPF/WpfExamples/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
         xmlns:local="clr-namespace:WpfExamples"
-        Title="OxyPlot WPF/XAML examples" Height="800" Width="480">
+        Title="OxyPlot WPF/XAML examples" Height="800" Width="480" Icon="OxyPlot_64.png">
     <ListBox 
         ItemsSource="{Binding Examples}" 
         BorderThickness="0" 
