--- a/Source/Examples/WPF/ExportDemo/ShellView.xaml
+++ b/Source/Examples/WPF/ExportDemo/ShellView.xaml
@@ -8,6 +8,7 @@
             <MenuItem Header="File">
                 <MenuItem Header="Save svg..." Name="SaveSvg"/>
                 <MenuItem Header="Save pdf..." Name="SavePdf"/>
+                <MenuItem Header="Save pdf with PdfSharp..." Name="SavePdf_PdfSharp"/>
                 <MenuItem Header="Save png..." Name="SavePng"/>
                 <MenuItem Header="Save xaml..." Name="SaveXaml"/>
                 <MenuItem Header="Save xps..." Name="SaveXps"/>
@@ -54,7 +55,7 @@
                         <MenuItem Header="Copy xaml" Name="ContextCopyXaml"/>
                     </ContextMenu>
                 </oxy:Plot.ContextMenu>
-            </oxy:Plot>           
+            </oxy:Plot>
         </Grid>
     </DockPanel>
 </Window>
