WPF: Add RefreshFlag property to Plot control (another way to refresh the plot)

--- a/Source/Examples/WPF/WpfExamples/Examples/RefreshDemo/MainWindow.xaml
+++ b/Source/Examples/WPF/WpfExamples/Examples/RefreshDemo/MainWindow.xaml
@@ -7,5 +7,6 @@
         <Button Content="Refresh by calling RefreshPlot on the Plot control" Click="RefreshMethod2_Click"/>
         <Button Content="Refresh by calling RefreshPlot on the PlotModel" Click="RefreshMethod3_Click"/>
         <Button Content="Refresh by calling RefreshPlot on the PlotModel from a non-UI thread" Click="RefreshMethod4_Click"/>
+        <Button Content="Refresh by changing RefreshFlag on the Plot from a non-UI thread" Click="RefreshMethod6_Click"/>
     </StackPanel>
 </Window>
