fix scrollbar was not shown in code tab

--- a/Source/Examples/Silverlight/ExampleBrowser/MainPage.xaml
+++ b/Source/Examples/Silverlight/ExampleBrowser/MainPage.xaml
@@ -52,7 +52,7 @@
             <sdk:TabItem Header="Code">
                 <TextBox AcceptsReturn="True" FontFamily="Consolas" 
                          Text="{Binding SelectedExample.Code, Mode=OneWay}" BorderThickness="0"
-                         ScrollViewer.VerticalScrollBarVisibility="Auto"
+                         VerticalScrollBarVisibility="Auto"
                          />
             </sdk:TabItem>
         </sdk:TabControl>
