--- a/Source/Examples/WPF/WpfExamples/Examples/RefreshDemo/MainWindow.xaml
+++ b/Source/Examples/WPF/WpfExamples/Examples/RefreshDemo/MainWindow.xaml
@@ -7,6 +7,6 @@
         <Button Content="Refresh by calling InvalidatePlot on the Plot control" Click="RefreshMethod2_Click"/>
         <Button Content="Refresh by calling InvalidatePlot on the PlotModel" Click="RefreshMethod3_Click"/>
         <Button Content="Refresh by calling InvalidatePlot on the PlotModel from a non-UI thread" Click="RefreshMethod4_Click"/>
-        <Button Content="Refresh by changing RefreshFlag on the Plot from a non-UI thread" Click="RefreshMethod6_Click"/>
+        <Button Content="Refresh by changing InvalidateFlag on the Plot from a non-UI thread" Click="RefreshMethod6_Click"/>
     </StackPanel>
 </Window>
