--- a/Source/Examples/WPF/WpfExamples/Examples/RefreshDemo/Window6.xaml
+++ b/Source/Examples/WPF/WpfExamples/Examples/RefreshDemo/Window6.xaml
@@ -1,10 +1,10 @@
 ﻿<Window x:Class="RefreshDemo.Window6"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:o="clr-namespace:OxyPlot.Wpf;assembly=OxyPlot.Wpf"
-        Title="Refresh by changing RefreshFlag property on the Plot" Height="480" Width="640">
+        Title="Refresh by changing InvalidateFlag property on the Plot" Height="480" Width="640">
     <DockPanel>
         <TextBlock DockPanel.Dock="Top" Text="{Binding Title}"/>
-        <o:Plot RefreshFlag="{Binding Refresh}">
+        <o:Plot InvalidateFlag="{Binding Refresh}">
             <o:LineSeries ItemsSource="{Binding Points}"/>
         </o:Plot>
     </DockPanel>
