--- a/Source/Examples/WPF/WpfExamples/Examples/ColumnSeriesDemo/MainWindow.xaml
+++ b/Source/Examples/WPF/WpfExamples/Examples/ColumnSeriesDemo/MainWindow.xaml
@@ -1,6 +1,6 @@
 ﻿<Window x:Class="ColumnSeriesDemo.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:oxy="clr-namespace:OxyPlot.Wpf;assembly=OxyPlot.Wpf" Title="BarSeriesDemo" Height="480" Width="640">
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:oxy="clr-namespace:OxyPlot.Wpf;assembly=OxyPlot.Wpf" Title="ColumnSeriesDemo" Height="480" Width="640">
     <TabControl>
         <TabItem Header="Binding to PlotModel">
             <oxy:Plot Model="{Binding Model1}"/>
