--- a/Source/Examples/WPF/WpfExamples/Examples/BindingDemo/MainWindow.xaml
+++ b/Source/Examples/WPF/WpfExamples/Examples/BindingDemo/MainWindow.xaml
@@ -3,13 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
         xmlns:oxy="clr-namespace:OxyPlot.Wpf;assembly=OxyPlot.Wpf" 
         Title="BindingDemo" Height="480" Width="640">
-    <Window.Resources>
-        <XmlDataProvider x:Key="WorldPopulationData" Source="WorldPopulation.xml"  />
-    </Window.Resources>
     <Grid>
-        <oxy:PlotView x:Name="plot1" Title="Binding ItemsSource" Subtitle="{Binding Subtitle}">
+        <oxy:PlotView Title="Binding ItemsSource" Subtitle="{Binding Subtitle}">
             <oxy:PlotView.Series>
-                <oxy:LineSeries Title="Simulated Value" DataFieldX="Time" DataFieldY="Value" Color="Blue" StrokeThickness="2" ItemsSource="{Binding Measurements}"/>
+                <oxy:LineSeries Title="Value" DataFieldX="Time" DataFieldY="Value" Color="Blue" StrokeThickness="2" ItemsSource="{Binding Measurements}"/>
                 <oxy:LineSeries Title="Maximum" DataFieldX="Time" DataFieldY="Maximum" Color="Red" LineStyle="Dash" StrokeThickness="2" ItemsSource="{Binding Measurements}"/>
                 <oxy:LineSeries Title="Minimum" DataFieldX="Time" DataFieldY="Minimum" Color="Green" LineStyle="Dot" StrokeThickness="2" ItemsSource="{Binding Measurements}"/>
             </oxy:PlotView.Series>
