--- a/Source/Examples/WPF/WpfExamples/Examples/CsvDemo/MainWindow.xaml
+++ b/Source/Examples/WPF/WpfExamples/Examples/CsvDemo/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="CsvDemo.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:oxy="clr-namespace:OxyPlot.Wpf;assembly=OxyPlot.Wpf" 
-        Title="CSV demo" Height="480" Width="640"
+        Title="CsvDemo" Height="480" Width="640"
         AllowDrop="True" Drop="Window_Drop">
     <DockPanel>
         <Menu DockPanel.Dock="Top">
