--- a/Source/Examples/WPF/WpfExamples/Examples/HeatMapDemo/MainWindow.xaml
+++ b/Source/Examples/WPF/WpfExamples/Examples/HeatMapDemo/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:oxy="http://oxyplot.codeplex.com"
-        Title="HeatMapSeries demo" Height="300" Width="300">
+        Title="HeatMapDemo" Height="480" Width="640">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
