--- a/Source/Examples/WPF/WpfExamples/Examples/PolarDemo/MainWindow.xaml
+++ b/Source/Examples/WPF/WpfExamples/Examples/PolarDemo/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="PolarDemo.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:oxy="clr-namespace:OxyPlot.Wpf;assembly=OxyPlot.Wpf" xmlns:local="clr-namespace:PolarDemo" 
-        Title="OxyPlot demo" Height="480" Width="640">
+        Title="PolarDemo" Height="480" Width="640">
     <TabControl>
         <TabItem Header="Defined by PlotModel">
             <oxy:PlotView Model="{Binding MyModel}"/>
